--- a/Hugging_Face_HandsOn.ipynb
+++ b/Hugging_Face_HandsOn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Hugging_Face_HandsOn.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPa7RXtTRH7Lyrk6rXdTnUI",
+      "authorship_tag": "ABX9TyPp3RXx8JmpmRFPOPuInaNk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1606,6 +1606,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# without using pipeline()"
+      ],
+      "metadata": {
+        "id": "3pLTp-go_7s6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from transformers import AutoTokenizer, AutoModelForSequenceClassification "
       ],
       "metadata": {
@@ -1628,7 +1639,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = AutoModelForSequenceClassification.from_pretrained(model_name)"
+        "model = AutoModelForSequenceClassification.from_pretrained(model_name)  #either we can mention the model_name (from Hugging Face) or mention the directory to load the model from"
       ],
       "metadata": {
         "id": "WqSsZeZC6i7W"
@@ -1805,10 +1816,28 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# To save\n",
+        "save_directory = 'saved'\n",
+        "tokenizer.save_pretrained(save_directory)\n",
+        "model.save_pretrained(save_directory)\n",
+        "\n",
+        "# To load\n",
+        "tokenizer = AutoTokenizer.from_pretrained(save_directory)\n",
+        "model = AutoModelForSequenceClassification.from_pretrained(save_directory)"
       ],
       "metadata": {
         "id": "lM9JkLSz-PpJ"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "NsTOyyBrBadI"
       },
       "execution_count": null,
       "outputs": []
