--- a/Hugging_Face_HandsOn.ipynb
+++ b/Hugging_Face_HandsOn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Hugging_Face_HandsOn.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPp3RXx8JmpmRFPOPuInaNk",
+      "authorship_tag": "ABX9TyPNEl5q4W2YmTMCb3z8rJkU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1834,12 +1834,18 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Fine-tuning\n",
+        "# 1. Prepare dataset (load)\n",
+        "# 2. Load pre-trained Tokenizer, call it with dataset -> encoding\n",
+        "# 3. Build PyTorch Dataset with Encodings\n",
+        "# 4. Load pre-trained model\n",
+        "# 5. a. Either load Trainer and train it\n",
+        "#    b. Or use native PyTorch training pipeline"
       ],
       "metadata": {
         "id": "NsTOyyBrBadI"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     }
   ]
